# Recipe-Tracker-API

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
recipe_managment/: settings.py  urls.py  wsgi.py
recipes/: exceptions.py  models.py  serializers.py  test.py  urls.py  views.py
recipes/base/: api_view.py
recipes/exceptions/: api_exceptions.py
recipes/migrations/: 0001_add_Ingredient_Recipe_RecipeIngredient.py  0002_add_soft_delete_and_created_at_updated_at_fields.py  0003_remove_default_time_in_deleted_at_field.py
